--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,8 @@
     <title>Document</title>
   </head>
   <body>
-    <h3>Steviebartx@gmail.com</h3>
-    <h3>713-291-3873</h3>
+    <h3>nunyabitness@fakeemail.com</h3>
+    <h3>456-123-7890</h3>
     <p>
       <a href="https://www.youtube.com/channel/UCO9tU_mLNGGONrFFFL_a5PA"
         >YouTube</a
